# RANSAC

./: CMakeLists.txt  README.md
RANSAC article code/: CMakeLists.txt  RANSAC.h  readme.txt
code Derville homographie/: homographie.cpp
include/: homography.h  linearmodel.h  merge.h  mergeimages.h  model.cpp  model.h  ransac.h  ransachomography.h  ransacl.h  test.h  utils.h
src/: homography.cpp  linearmodel.cpp  main.cpp  merge.cpp  mergeimages.cpp  ransac.cpp  ransachomography.cpp  ransacl.cpp  test.cpp  utils.cpp
